kubernetes/server.yml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
    tier: backend
spec:
  selector:
    app: server
    tier: backend
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: server
        tier: backend
    spec:
      containers:
      - name: server
        image: pyivanc/jarvis-server:latest
        ports:
          - containerPort: 5000
      restartPolicy: Always
