kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jarvis-ingress
  annotations:
spec:
  rules:
  - host: jarvis
    http:
      paths:
      - path: /
        backend:
          serviceName: client
          servicePort: 8080
      - path: /books
        backend:
          serviceName: server
          servicePort: 5000
